[package]
name = "asset_maker"
version = "0.1.0"
authors = ["Rajat Rajput <rajputrajat@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
simplelog = "0.8"
walkdir = "2.3"
log-panics = "2.0"
regex = "1.4"
clap = "~2.33"
tempfile = "3.2"
anyhow = "1.0.38"
